# Prog_8V41_BEM_lab8

./: CMakeLists.txt  README.md
task_1/: CMakeLists.txt  main.cpp  task.cpp  task.hpp
task_2/: CMakeLists.txt  main.cpp  task.cpp  task.hpp
task_3/: CMakeLists.txt  main.cpp  task.cpp  task.hpp
